Fixed spacing between titles in banner

--- a/streaming-app/src/Banner.css
+++ b/streaming-app/src/Banner.css
@@ -41,8 +41,11 @@ transform: scale(1.2);
   background-color: black;
   color: white;
   display: flex;
-  width: 15vw;
+  width: 10vw;
+  max-height: 17vw;
   padding: 10px;
+  border-radius: 10px;
+  overflow: scroll;
 }
 .close-button {
 color:red;
